add some FIXMEs

--- a/app/templates/attendances.html
+++ b/app/templates/attendances.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+<!--FIXME: Fix content dimensions-->
 <div class="row align-items-center">
     <h1>Attendances <a href="{{ url_for('new_attendance') }}" class="btn btn-sm btn-add"><i
                 class="fa-solid fa-plus"></i></a>
