--- a/app/templates/classes.html
+++ b/app/templates/classes.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+<!--FIXME: Fix content/main height-->
 <div class="row align-items-center">
     <h1>Classes <a href="{{ url_for('new_class') }}" class="btn btn-sm btn-add"><i class="fa-solid fa-plus"></i></a>
     </h1>
