--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/22426a2d8b.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css')}}">
     {% if title %}
     <title>GymLog- {{ title }}</title>
@@ -41,6 +42,16 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('upload_csv') }}">Upload</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Reports
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Weekly</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('monthly_report') }}">Monthly</a></li>
+                                <li><a class="dropdown-item" href="#">Yearly</a></li>
+                            </ul>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Register</a>
                         </li>
