--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light site-nav-bg">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand site-link" href="#">GymLog</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
