--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div>
+<div id="home">
     <h1 class="welcome">Welcome to GymLog</h1>
     <p class="quote">{{quote}}<br>
         - {{author}}</p>
