--- a/app/templates/class.html
+++ b/app/templates/class.html
@@ -1,47 +1,36 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container-fluid">
-    <article class="media content-section">
-        <div class="row align-items-baseline m-10">
-            <div class="col-5">
-                <h2>{{ gymclass.name }}</h2>
-            </div>
-            <div class="col-3">
-                <p class="text-muted">Type: {{ gymclass.class_type}}</p>
-            </div>
-            <h4 class="article-title">Attendance History:</h4>
-            {% for a in gymclass.attendance_list|sort %}
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">{{ a.date_attended.strftime('%Y-%m-%d') }}</li>
-            </ul>
-            {% endfor %}
-        </div>
-        <hr width="90%" align="center" size="4">
-        <div>
-            <a class="btn btn-light btn-sm m-1" href="{{ url_for('classes') }}">&lt&lt</a>
-            <a class="btn btn-info btn-sm m-1" href="{{ url_for('new_attendance') }}">Add Attendance</a>
-            <a class="btn btn-warning btn-sm m-1" href="{{ url_for('edit_class', class_id=gymclass.id) }}">Update</a>
-            <button type="button" class="btn btn-danger btn-sm m-1" data-bs-toggle="modal"
-                data-bs-target="#deleteModal">Delete</button>
-            <!-- Modal -->
-            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="deleteModalLabel">Delete Class?</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <form action="{{ url_for('delete_class', class_id=gymclass.id) }}" method="POST">
-                                <input type="submit" class="btn btn-danger" value="Delete">
-                            </form>
-                        </div>
+<div class="row align-items-center">
+    <h1>{{ gymclass.name }} <a href="{{ url_for('edit_class', class_id=gymclass.id) }}"
+            class="btn btn-sm btn-current"><i class="fa-solid fa-pen-to-square"></i></a>
+        <button type="button" class="btn btn-current btn-sm m-1" data-bs-toggle="modal" data-bs-target="#deleteModal"><i
+                class="fa-solid fa-trash-can"></i></button>
+        <!-- Modal -->
+        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteModalLabel">Delete <strong>{{ gymclass.name }}</strong> and
+                            all associated
+                            attendances?</h5>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <form action="{{ url_for('delete_class', class_id=gymclass.id) }}" method="POST">
+                            <input type="submit" class="btn btn-danger" value="Delete">
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </article>
+    </h1>
+    <h4 class="subtitle">{{ gymclass.class_type }}</h4>
+    <h4>Attendance History <a href="{{ url_for('new_attendance') }}" class="btn btn-sm btn-add"><i
+                class="fa-solid fa-plus"></i></a></h4>
+    <ul class="list-group list-group-flush"></ul>
+    {% for a in gymclass.attendance_list|sort %}
+    <li class="list-group-item list-group-item-dark">{{ a.date_attended.strftime('%Y-%m-%d') }}</li>
+    {% endfor %}
+    </ul>
 </div>
-{% endblock content %}
+{% endblock content %}6
