--- a/app/templates/monthly_report.html
+++ b/app/templates/monthly_report.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="row">
+<!--FIXME: need top margin or something-->
+<div class="row justify-content-center">
     <h1>Monthly Report</h1>
 </div>
 <canvas id="lineChart" width="700" height="400"></canvas>
