add yearly report

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -50,7 +50,7 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Weekly</a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('monthly_report') }}">Monthly</a></li>
-                                <li><a class="dropdown-item" href="#">Yearly</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('yearly_report') }}">Yearly</a></li>
                             </ul>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Register</a>
