--- a/app/templates/yearly_report.html
+++ b/app/templates/yearly_report.html
@@ -1,6 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
 <!--FIXME: need top margin or something-->
+<!--TODO: further style bar graph:
+1. fix bar width
+2. style labels
+3. add border to graph
+TODO: actually I want border to all non-card content
+-->
 <div class="row justify-content-center">
     <h1>Yearly Report</h1>
 </div>
