--- a/app/templates/classes.html
+++ b/app/templates/classes.html
@@ -16,6 +16,7 @@
                 <p class="card-subtitle mb-2">{{ c.class_type }}</p>
                 <p class="card-text">
                     Total Attendance: <strong>{{ c.attendance_list|length }} </strong></br>
+                    <!--FIXME: only grab date and not the whole repr -->
                     Most recent attendance: <strong>{{ c.attendance_list|sort(reverse = True)|first }}</strong>
                 </p>
                 <a href="{{ url_for('edit_class', class_id=c.id) }}" class="btn btn-sm btn-current"><i
