--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -20,6 +20,7 @@
 
 <body>
     <header>
+        <!--TODO: add dark/light mode-->
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand brand" href="{{ url_for('home') }}">GymLog</a>
