--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <!--TODO: add dark/light mode-->
-        <nav class="navbar navbar-expand-lg bg-dark">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand brand" href="{{ url_for('home') }}">GymLog</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -60,6 +60,7 @@
                             <a class="nav-link" href="#">Login</a>
                         </li>
                     </ul>
+                    <div id="modeIcon"><i class="fa-solid fa-sun"></i></div>
                 </div>
             </div>
         </nav>
@@ -84,6 +85,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
+    <script>
+        var icon = document.getElementById("modeIcon");
+        icon.onclick = function () {
+            document.body.classList.toggle("light-theme");
+            icon.addEventListener('click', function () {
+                icon.querySelector('i').classList.toggle('fa-sun');
+                icon.querySelector('i').classList.toggle('fa-moon');
+            });
+        };
+    </script>
 </body>
 
 </html>
