--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -86,14 +86,20 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
     <script>
-        var icon = document.getElementById("modeIcon");
-        icon.onclick = function () {
-            document.body.classList.toggle("light-theme");
-            icon.addEventListener('click', function () {
-                icon.querySelector('i').classList.toggle('fa-sun');
-                icon.querySelector('i').classList.toggle('fa-moon');
+        document.addEventListener('DOMContentLoaded', function () {
+            var modeIcon = document.getElementById('modeIcon');
+            modeIcon.onclick = function () {
+                document.body.classList.toggle("light-theme")
+            };
+
+            // Add a click event listener to the element
+            modeIcon.addEventListener('click', function () {
+                // Toggle the class on the <i> element
+                modeIcon.querySelector('i').classList.toggle('fa-sun');
+                modeIcon.querySelector('i').classList.toggle('fa-moon');
             });
-        };
+        });
+
     </script>
 </body>
 
