change toggle icon

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -60,7 +60,7 @@
                             <a class="nav-link" href="#">Login</a>
                         </li>
                     </ul>
-                    <div id="lightModeToggle"><i class="fa-solid fa-sun"></i></div>
+                    <div id="lightModeToggle"><i class="fa-solid fa-circle-half-stroke"></i></div>
                 </div>
             </div>
         </nav>
