--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -20,7 +20,6 @@
 
 <body>
     <header>
-        <!--TODO: add dark/light mode-->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand brand" href="{{ url_for('home') }}">GymLog</a>
@@ -60,7 +59,7 @@
                             <a class="nav-link" href="#">Login</a>
                         </li>
                     </ul>
-                    <div id="lightModeToggle"><i class="fa-solid fa-circle-half-stroke"></i></div>
+                    <button id="lightModeToggle"><i class="fa-solid fa-circle-half-stroke"></i></button>
                 </div>
             </div>
         </nav>
