--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,3 +1,35 @@
 {% extends "layout.html" %} {% block content %}
-<h1>Register</h1>
+<div class="content-section">
+  <h1>Register</h1>
+  <form method="POST" action="">
+    {{ form.hidden_tag() }}
+    <fieldset class="form-group">
+      <!-- <legend>Join Today</legend> -->
+      <div class="form-group">
+        {{ form.username.label(class="form-label") }} {{
+        form.username(class="form-control form-control-lg") }}
+      </div>
+      <div class="form-group">
+        {{ form.email.label(class="form-label") }} {{
+        form.email(class="form-control form-control-lg") }}
+      </div>
+      <div class="form-group">
+        {{ form.password.label(class="form-label") }} {{
+        form.password(class="form-control form-control-lg") }}
+      </div>
+      <div class="form-group">
+        {{ form.confirm_password.label(class="form-label") }} {{
+        form.confirm_password(class="form-control form-control-lg") }}
+      </div>
+    </fieldset>
+    <div class="form-group">{{ form.submit(class="btn btn-current") }}</div>
+  </form>
+</div>
+<div class="border-top pt-3">
+  <small class="text-muted">
+    Already have an account?
+    <a class="ml-2" href="{{ url_for('login') }}">Sign in here!</a>
+  </small>
+</div>
+
 {% endblock content %}
