--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -9,18 +9,15 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <script
       src="https://kit.fontawesome.com/22426a2d8b.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
     <link
       rel="stylesheet"
       type="text/css"
-      href="{{ url_for('static', filename='main.css')}}"
-    />
+      href="{{ url_for('static', filename='main.css')}}" />
     {% if title %}
     <title>GymLog- {{ title }}</title>
     {% else %}
@@ -30,8 +27,8 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container">
           <a class="navbar-brand brand" href="{{ url_for('home') }}">GymLog</a>
           <button
             class="navbar-toggler"
@@ -40,8 +37,7 @@
             data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -76,12 +72,13 @@
                   id="navbarDropdown"
                   role="button"
                   data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
+                  aria-expanded="false">
                   Reports
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Weekly</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Weekly</a>
+                  </li>
                   <li>
                     <a
                       class="dropdown-item"
@@ -98,12 +95,13 @@
                   </li>
                 </ul>
               </li>
-
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('register')}}">Register</a>
+                <a class="nav-link" href="{{ url_for('register') }}"
+                  >Register</a
+                >
               </li>
               <li>
-                <a class="nav-link" href="{{ url_for('login')}}">Login</a>
+                <a class="nav-link" ref="{{ url_for('login') }}"> Login</a>
               </li>
             </ul>
             <button id="lightModeToggle">
@@ -124,13 +122,11 @@
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
       integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script src="../static/js/lightmode.js"></script>
   </body>
 </html>
