--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -95,18 +95,20 @@
                   </li>
                 </ul>
               </li>
+            </ul>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('register') }}"
                   >Register</a
                 >
               </li>
               <li>
-                <a class="nav-link" ref="{{ url_for('login') }}"> Login</a>
+                <a class="nav-link" ref="{{ url_for('login') }}">Login</a>
               </li>
+              <button id="lightModeToggle">
+                <i class="fa-solid fa-circle-half-stroke"></i>
+              </button>
             </ul>
-            <button id="lightModeToggle">
-              <i class="fa-solid fa-circle-half-stroke"></i>
-            </button>
           </div>
         </div>
       </nav>
