--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,29 +1,34 @@
 {% extends "layout.html" %} {% block content %}
-<div class="content-section">
-  <h1>Register</h1>
-  <form method="POST" action="">
-    {{ form.hidden_tag() }}
-    <fieldset class="form-group">
-      <!-- <legend>Join Today</legend> -->
-      <div class="form-group">
-        {{ form.username.label(class="form-label") }} {{
-        form.username(class="form-control form-control-lg") }}
+<div class="row text-center mt-2">
+  <h1 class="display-6">Join Today!</h1>
+</div>
+<div class="row justify-content-center">
+  <div class="col-6">
+    <form method="POST" action="">
+      {{ form.hidden_tag() }}
+      <fieldset class="form-group">
+        <div class="form-group">
+          {{ form.username.label(class="form-label") }} {{
+          form.username(class="form-control form-control-lg") }}
+        </div>
+        <div class="form-group">
+          {{ form.email.label(class="form-label") }} {{
+          form.email(class="form-control form-control-lg") }}
+        </div>
+        <div class="form-group">
+          {{ form.password.label(class="form-label") }} {{
+          form.password(class="form-control form-control-lg") }}
+        </div>
+        <div class="form-group">
+          {{ form.confirm_password.label(class="form-label") }} {{
+          form.confirm_password(class="form-control form-control-lg") }}
+        </div>
+      </fieldset>
+      <div class="form-group mt-5">
+        {{ form.submit(class="btn btn-current") }}
       </div>
-      <div class="form-group">
-        {{ form.email.label(class="form-label") }} {{
-        form.email(class="form-control form-control-lg") }}
-      </div>
-      <div class="form-group">
-        {{ form.password.label(class="form-label") }} {{
-        form.password(class="form-control form-control-lg") }}
-      </div>
-      <div class="form-group">
-        {{ form.confirm_password.label(class="form-label") }} {{
-        form.confirm_password(class="form-control form-control-lg") }}
-      </div>
-    </fieldset>
-    <div class="form-group">{{ form.submit(class="btn btn-current") }}</div>
-  </form>
+    </form>
+  </div>
 </div>
 <div class="border-top pt-3">
   <small class="text-muted">
