--- a/app/templates/classes.html
+++ b/app/templates/classes.html
@@ -1,9 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
-<!--FIXME: Fix content/main height-->
-<div class="row align-items-center">
-    <h1>Classes <a href="{{ url_for('new_class') }}" class="btn btn-sm btn-add"><i class="fa-solid fa-plus"></i></a>
-    </h1>
+<div class="text-center mt-2">
+    <h1 class="display-4">Classes <a href="{{ url_for('new_class') }}" class="btn btn-sm btn-add"><i class="fa-solid fa-plus"></i></a></h1>
 </div>
 <div class="row row-cols-1 row-cols-md-3">
     {% for c in gym_classes|sort %}
