--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -6,27 +6,25 @@
   <div class="col-6">
     <form method="POST" action="">
       {{ form.hidden_tag() }}
-      <fieldset class="form-group">
-        <div class="form-group">
+      <fieldset class="mb-3">
+        <div class="mb-3">
           {{ form.username.label(class="form-label") }} {{
           form.username(class="form-control form-control-lg") }}
         </div>
-        <div class="form-group">
+        <div class="mb-3">
           {{ form.email.label(class="form-label") }} {{
           form.email(class="form-control form-control-lg") }}
         </div>
-        <div class="form-group">
+        <div class="mb-3">
           {{ form.password.label(class="form-label") }} {{
           form.password(class="form-control form-control-lg") }}
         </div>
-        <div class="form-group">
+        <div class="mb-3">
           {{ form.confirm_password.label(class="form-label") }} {{
           form.confirm_password(class="form-control form-control-lg") }}
         </div>
       </fieldset>
-      <div class="form-group mt-5">
-        {{ form.submit(class="btn btn-current") }}
-      </div>
+      <div class="mb-3 mt-5">{{ form.submit(class="btn btn-current") }}</div>
     </form>
   </div>
 </div>
