Allow errors to display on invalid fields

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -8,20 +8,52 @@
       {{ form.hidden_tag() }}
       <fieldset class="mb-3">
         <div class="mb-3">
-          {{ form.username.label(class="form-label") }} {{
-          form.username(class="form-control form-control-lg") }}
+          {{ form.username.label(class="form-label") }} {% if
+          form.username.errors %} {{ form.username(class="form-control
+          form-control-lg is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.username.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.username(class="form-control form-control-lg") }}
+          {% endif %}
         </div>
         <div class="mb-3">
-          {{ form.email.label(class="form-label") }} {{
-          form.email(class="form-control form-control-lg") }}
+          {{ form.email.label(class="form-label") }} {% if form.email.errors %}
+          {{ form.email(class="form-control form-control-lg is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.email.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.email(class="form-control form-control-lg") }} {%
+          endif %}
         </div>
         <div class="mb-3">
-          {{ form.password.label(class="form-label") }} {{
-          form.password(class="form-control form-control-lg") }}
+          {{ form.password.label(class="form-label") }} {% if
+          form.password.errors %} {{ form.password(class="form-control
+          form-control-lg is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.password.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.password(class="form-control form-control-lg") }}
+          {% endif %}
         </div>
         <div class="mb-3">
-          {{ form.confirm_password.label(class="form-label") }} {{
-          form.confirm_password(class="form-control form-control-lg") }}
+          {{ form.confirm_password.label(class="form-label") }} {% if
+          form.confirm_password.errors %} {{
+          form.confirm_password(class="form-control form-control-lg is-invalid")
+          }}
+          <div class="invalid-feedback">
+            {% for error in form.confirm_password.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.confirm_password(class="form-control
+          form-control-lg") }} {% endif %}
         </div>
       </fieldset>
       <div class="mb-3 mt-5">{{ form.submit(class="btn btn-current") }}</div>
