--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -102,8 +102,8 @@
                   >Register</a
                 >
               </li>
-              <li>
-                <a class="nav-link" ref="{{ url_for('login') }}">Login</a>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('login') }}">Login</a>
               </li>
             </ul>
           </div>
