--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,3 +1,50 @@
 {% extends "layout.html" %} {% block content %}
-<h1>Login</h1>
+<div class="row text-center mt-2">
+  <h1 class="display-6">Sign In</h1>
+</div>
+<div class="row justify-content-center">
+  <div class="col-6">
+    <form method="POST" action="">
+      {{ form.hidden_tag() }}
+      <fieldset class="mb-3">
+        <div class="mb-3">
+          {{ form.email.label(class="form-label") }} {% if form.email.errors %}
+          {{ form.email(class="form-control form-control-lg is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.email.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.email(class="form-control form-control-lg") }} {%
+          endif %}
+        </div>
+        <div class="mb-3">
+          {{ form.password.label(class="form-label") }} {% if
+          form.password.errors %} {{ form.password(class="form-control
+          form-control-lg is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.password.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.password(class="form-control form-control-lg") }}
+          {% endif %}
+        </div>
+        <div class="form-check mb-3">
+          {{ form.remember(class="form-check-input") }} {{
+          form.remember.label(class="form-check-label") }}
+        </div>
+      </fieldset>
+      <div class="mb-3 mt-5">{{ form.submit(class="btn btn-current") }}</div>
+      <small class="text-muted ml2"><a href="#">Forgot Password?</a></small>
+    </form>
+  </div>
+</div>
+<div class="border-top pt-3">
+  <small class="text-muted">
+    Don't have an account?
+    <a class="ml-2" href="{{ url_for('register') }}">Sign up here!</a>
+  </small>
+</div>
+
 {% endblock content %}
