run Black formatter on py and prettier on JSX

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,8 +1,9 @@
-{% extends "layout.html" %}
-{% block content %}
+{% extends "layout.html" %} {% block content %}
 <div id="home">
-    <h1 class="welcome">Welcome to GymLog</h1>
-    <p class="quote">{{quote}}<br>
-        - {{author}}</p>
+  <h1 class="welcome">Welcome to GymLog</h1>
+  <p class="quote">
+    {{quote}}<br />
+    - {{author}}
+  </p>
 </div>
 {% endblock content %}
