--- a/app/templates/attendances.html
+++ b/app/templates/attendances.html
@@ -1,60 +1,99 @@
-{% extends "layout.html" %}
-{% block content %}
+{% extends "layout.html" %} {% block content %}
 <!--FIXME: Fix content dimensions-->
 <div class="row align-items-center">
-    <h1>Attendances <a href="{{ url_for('new_attendance') }}" class="btn btn-sm btn-add"><i
-                class="fa-solid fa-plus"></i></a>
-    </h1>
+  <h1>
+    Attendances
+    <a href="{{ url_for('new_attendance') }}" class="btn btn-sm btn-add"
+      ><i class="fa-solid fa-plus"></i
+    ></a>
+  </h1>
 </div>
 <div class="content">
-    {% for a in attendance_list %}
-    <div class="row">
-        <div class="col-2">
-            <p>{{ a.date_attended.strftime('%Y-%m-%d') }}</p>
-        </div>
-        <div class="col-8">
-            <p><a class="site-link" href="{{ url_for('show_class', class_id=a.class_id) }}">{{ a.class_taken.name }}</a>
-            </p>
-        </div>
-        <div class="col-2">
-            <button type="button" class="btn btn-danger btn-sm m-1" data-bs-toggle="modal"
-                data-bs-target="#deleteModal"><i class="fa-solid fa-trash"></i></button>
-            <!-- Modal -->
-            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="deleteModalLabel">Delete Attendance?</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <form action="{{ url_for('delete_attendance', attendance_id=a.id) }}" method="POST">
-                                <input type="submit" class="btn btn-sm btn-danger" value="Delete">
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+  {% for a in attendance_list %}
+  <div class="row">
+    <div class="col-2">
+      <p>{{ a.date_attended.strftime('%Y-%m-%d') }}</p>
     </div>
-    {% endfor %}
+    <div class="col-8">
+      <p>
+        <a
+          class="site-link"
+          href="{{ url_for('show_class', class_id=a.class_id) }}"
+          >{{ a.class_taken.name }}</a
+        >
+      </p>
+    </div>
+    <div class="col-2">
+      <button
+        type="button"
+        class="btn btn-danger btn-sm m-1"
+        data-bs-toggle="modal"
+        data-bs-target="#deleteModal">
+        <i class="fa-solid fa-trash"></i>
+      </button>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="deleteModal"
+        tabindex="-1"
+        aria-labelledby="deleteModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="deleteModalLabel">
+                Delete Attendance?
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"></button>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal">
+                Close
+              </button>
+              <form
+                action="{{ url_for('delete_attendance', attendance_id=a.id) }}"
+                method="POST">
+                <input
+                  type="submit"
+                  class="btn btn-sm btn-danger"
+                  value="Delete" />
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
 </div>
 <nav class="mt-4">
-    <ul class="pagination justify-content-center">
-        {% for page_num in attendance_list.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-        {% if page_num %}
-        {% if attendance_list.page == page_num %}
-        <li><a class="btn btn-current mb-4" href="{{ url_for('attendances', page=page_num) }}">{{ page_num }}</a></li>
-        {% else %}
-        <li><a class="btn btn-other mb-4" href="{{ url_for('attendances', page=page_num) }}">{{ page_num }}</a>
-        </li>
-        {% endif %}
-        {% else %}
-        ...
-        {% endif %}
-        {% endfor %}
-    </ul>
+  <ul class="pagination justify-content-center">
+    {% for page_num in attendance_list.iter_pages(left_edge=1, right_edge=1,
+    left_current=1, right_current=2) %} {% if page_num %} {% if
+    attendance_list.page == page_num %}
+    <li>
+      <a
+        class="btn btn-current mb-4"
+        href="{{ url_for('attendances', page=page_num) }}"
+        >{{ page_num }}</a
+      >
+    </li>
+    {% else %}
+    <li>
+      <a
+        class="btn btn-other mb-4"
+        href="{{ url_for('attendances', page=page_num) }}"
+        >{{ page_num }}</a
+      >
+    </li>
+    {% endif %} {% else %} ... {% endif %} {% endfor %}
+  </ul>
 </nav>
 {% endblock content %}
