--- a/app/templates/monthly_report.html
+++ b/app/templates/monthly_report.html
@@ -1,37 +1,36 @@
-{% extends "layout.html" %}
-{% block content %}
+{% extends "layout.html" %} {% block content %}
 <!--FIXME: need top margin or something-->
 <div class="row justify-content-center">
-    <h1>Monthly Report</h1>
+  <h1>Monthly Report</h1>
 </div>
 <canvas id="lineChart" width="700" height="400"></canvas>
 <script>
-    var ctx = document.getElementById("lineChart").getContext("2d");
-    var myChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: {{ labels | safe }},
-    datasets: [{
-        label: 'Attendances',
-        data: {{ values | safe }},
-        backgroundColor: [
-        'rgba(50, 205, 50, 0.5)'
-    ],
-        borderColor: [
-        'rgba(255, 255, 255, 1)'
-    ],
-        borderWidth: 1
-    }]
-        },
-    options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero: true
-                }
-            }]
-        }
-    }
-    });
+  var ctx = document.getElementById("lineChart").getContext("2d");
+  var myChart = new Chart(ctx, {
+      type: 'bar',
+      data: {
+          labels: {{ labels | safe }},
+  datasets: [{
+      label: 'Attendances',
+      data: {{ values | safe }},
+      backgroundColor: [
+      'rgba(50, 205, 50, 0.5)'
+  ],
+      borderColor: [
+      'rgba(255, 255, 255, 1)'
+  ],
+      borderWidth: 1
+  }]
+      },
+  options: {
+      scales: {
+          yAxes: [{
+              ticks: {
+                  beginAtZero: true
+              }
+          }]
+      }
+  }
+  });
 </script>
 {% endblock content %}
