--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -1,17 +1,18 @@
-{% extends "layout.html" %}
-{% block content %}
+{% extends "layout.html" %} {% block content %}
 <div class="container-fluid">
-    <article class="media content-section mt-4">
-        <h2 class="article-title">Upload CSV</h2>
-        <div class="row">
-            <form action="/upload" method="POST" enctype="multipart/form-data" class="form-group">
-                <label for="file">
-                    File:
-                </label>
-                <input type="file" id="file" name="file">
-                <button class="btn btn-primary">Upload</button>
-            </form>
-        </div>
-    </article>
+  <article class="media content-section mt-4">
+    <h2 class="article-title">Upload CSV</h2>
+    <div class="row">
+      <form
+        action="/upload"
+        method="POST"
+        enctype="multipart/form-data"
+        class="form-group">
+        <label for="file"> File: </label>
+        <input type="file" id="file" name="file" />
+        <button class="btn btn-primary">Upload</button>
+      </form>
+    </div>
+  </article>
 </div>
 {% endblock content %}
