add logout route

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -97,6 +97,11 @@
               </li>
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              {% if current_user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+              </li>
+              {% else %}
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('register') }}"
                   >Register</a
@@ -105,6 +110,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('login') }}">Login</a>
               </li>
+              {% endif %}
             </ul>
           </div>
           <button id="lightModeToggle">
