--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -99,6 +99,9 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               {% if current_user.is_authenticated %}
               <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('account') }}">Account</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
               </li>
               {% else %}
