Closes #28: split routes and forms into packages using Blueprint

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -248,3 +248,7 @@ a.article-title:hover {
   color: var(--accent-color);
   border-color: var(--accent-color);
 }
+
+#deleteModalLabel {
+  color: black;
+}
