--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -63,7 +63,7 @@
 <div class="border-top pt-3">
   <small class="text-muted">
     Already have an account?
-    <a class="ml-2" href="{{ url_for('login') }}">Sign in here!</a>
+    <a class="ml-2" href="{{ url_for('users.login') }}">Sign in here!</a>
   </small>
 </div>
 
