--- a/app/templates/attendances.html
+++ b/app/templates/attendances.html
@@ -3,7 +3,9 @@
 <div class="row align-items-center">
   <h1>
     Attendances
-    <a href="{{ url_for('new_attendance') }}" class="btn btn-sm btn-add"
+    <a
+      href="{{ url_for('attendances.new_attendance') }}"
+      class="btn btn-sm btn-add"
       ><i class="fa-solid fa-plus"></i
     ></a>
   </h1>
@@ -18,7 +20,7 @@
       <p>
         <a
           class="site-link"
-          href="{{ url_for('show_class', class_id=a.class_id) }}"
+          href="{{ url_for('classes.show_class', class_id=a.class_id) }}"
           >{{ a.class_taken.name }}</a
         >
       </p>
@@ -31,7 +33,6 @@
         data-bs-target="#deleteModal">
         <i class="fa-solid fa-trash"></i>
       </button>
-      <!-- Modal -->
       <div
         class="modal fade"
         id="deleteModal"
@@ -51,14 +52,11 @@
                 aria-label="Close"></button>
             </div>
             <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal">
+              <button type="button" class="btn btn-sm" data-bs-dismiss="modal">
                 Close
               </button>
               <form
-                action="{{ url_for('delete_attendance', attendance_id=a.id) }}"
+                action="{{ url_for('attendances.delete_attendance', attendance_id=a.id) }}"
                 method="POST">
                 <input
                   type="submit"
@@ -81,7 +79,7 @@
     <li>
       <a
         class="btn btn-current mb-4"
-        href="{{ url_for('attendances', page=page_num) }}"
+        href="{{ url_for('attendances.show_attendances', page=page_num) }}"
         >{{ page_num }}</a
       >
     </li>
@@ -89,7 +87,7 @@
     <li>
       <a
         class="btn btn-other mb-4"
-        href="{{ url_for('attendances', page=page_num) }}"
+        href="{{ url_for('attendances.show_attendances', page=page_num) }}"
         >{{ page_num }}</a
       >
     </li>
