--- a/app/templates/classes.html
+++ b/app/templates/classes.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="text-center mt-2">
-    <h1 class="display-4">Classes <a href="{{ url_for('new_class') }}" class="btn btn-sm btn-add"><i class="fa-solid fa-plus"></i></a></h1>
+    <h1 class="display-4">Classes <a href="{{ url_for('classes.new_class') }}" class="btn btn-sm btn-add"><i class="fa-solid fa-plus"></i></a></h1>
 </div>
 <div class="row row-cols-1 row-cols-md-3">
     {% for c in gym_classes|sort %}
@@ -16,9 +16,9 @@
                     Total Attendance: <strong>{{ c.attendance_list|length }} </strong></br>
                     Most recent attendance: {{ (c.attendance_list|sort(reverse = True)|first).date_attended }}
                 </p>
-                <a href="{{ url_for('edit_class', class_id=c.id) }}" class="btn btn-sm btn-current"><i
+                <a href="{{ url_for('classes.edit_class', class_id=c.id) }}" class="btn btn-sm btn-current"><i
                         class="fa-solid fa-pen-to-square"></i></a>
-                <a href="{{ url_for('show_class', class_id=c.id) }}" class="btn btn-sm btn-current"><i
+                <a href="{{ url_for('classes.show_class', class_id=c.id) }}" class="btn btn-sm btn-current"><i
                         class="fa-solid fa-circle-info"></i></a>
             </div>
         </div>
@@ -31,11 +31,11 @@
         {% if page_num %}
         {% if gym_classes.page == page_num %}
         <li class="page-item">
-            <a class="btn btn-current mb-4" href="{{ url_for('classes', page=page_num) }}">{{ page_num }}</a>
+            <a class="btn btn-current mb-4" href="{{ url_for('classes.show_classes', page=page_num) }}">{{ page_num }}</a>
         </li>
         {% else %}
         <li class="page-item">
-            <a class="btn btn-other mb-4" href="{{ url_for('classes', page=page_num) }}">{{ page_num }}</a>
+            <a class="btn btn-other mb-4" href="{{ url_for('classes.show_classes', page=page_num) }}">{{ page_num }}</a>
         </li>
         {% endif %}
         {% else %}
