--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -43,7 +43,7 @@
 <div class="border-top pt-3">
   <small class="text-muted">
     Don't have an account?
-    <a class="ml-2" href="{{ url_for('register') }}">Sign up here!</a>
+    <a class="ml-2" href="{{ url_for('users.register') }}">Sign up here!</a>
   </small>
 </div>
 
