--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -135,11 +135,14 @@
       </nav>
     </header>
     <main role="main" class="container">
-      <div class="row">
-        {% with messages = get_flashed_messages(with_categories=true) %} {% if
-        messages %} {% for category, message in messages %}
-        <div class="alert alert-{{ category }}">{{ message }}</div>
-        {% endfor %} {% endif %} {% endwith %} {% block content %}{% endblock %}
+      <div class="row justify-content-center">
+        <div class="col-md-10">
+          {% with messages = get_flashed_messages(with_categories=true) %} {% if
+          messages %} {% for category, message in messages %}
+          <div class="alert alert-{{ category }}">{{ message }}</div>
+          {% endfor %} {% endif %} {% endwith %} {% block content %}{% endblock
+          %}
+        </div>
       </div>
     </main>
     <script
